Removed the -5px margin bottom since displaying the image as a block fixes the link spacing issue and doesn't need the -5px since the amount needed is different for some browsers.

--- a/sass/partials/_testimonials-block.scss
+++ b/sass/partials/_testimonials-block.scss
@@ -43,6 +43,9 @@
     display: block;
     padding: 0;
     max-width: 100%;
+    img {
+      display: block;
+    }
   }
 }
 
@@ -69,7 +72,6 @@
     .testimonial-block__image {
       max-width: 325px;
       padding-right: 15px;
-      margin-bottom: -5px;
     }
   }
 }
